# -cookiecutter-python-claude-project

./: CLAUDE.md  LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.claude/commands/: architect.md  ba.md  deploy.md  develop.md  pipeline.md  pm.md  review.md  tech-lead.md  test.md
{{cookiecutter.project_slug}}/.github/workflows/: agent-pipeline.yml  ci.yml
{{cookiecutter.project_slug}}/agents/: STANDARDS.md
{{cookiecutter.project_slug}}/agents/architect/: CLAUDE.md
{{cookiecutter.project_slug}}/agents/business-analyst/: CLAUDE.md
{{cookiecutter.project_slug}}/agents/developer/: CLAUDE.md
{{cookiecutter.project_slug}}/agents/devops/: CLAUDE.md
{{cookiecutter.project_slug}}/agents/project-manager/: CLAUDE.md
{{cookiecutter.project_slug}}/agents/tech-lead/: CLAUDE.md
{{cookiecutter.project_slug}}/agents/tester/: CLAUDE.md
{{cookiecutter.project_slug}}/docker/: Dockerfile  docker-compose.yml
{{cookiecutter.project_slug}}/projects/.templates/: architecture.md  spec.md  task.md
{{cookiecutter.project_slug}}/scripts/: run_agent.sh  run_pipeline.sh  setup.sh
{{cookiecutter.project_slug}}/src/{{ cookiecutter.project_slug | replace('-', '_') }}/: __init__.py  agent.py  cli.py  config.py  orchestrator.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_agent.py  test_integrations.py  test_orchestrator.py
{{cookiecutter.project_slug}}/workflows/: project-setup.md  validation-pipeline.md
(+12 files in other folders)
